# rust_image_viewer

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/controller/: message.rs  mod.rs  time.rs
src/view/: application.rs  frame.rs  mod.rs
src/viewer/: mod.rs
src/viewer/controller/: message.rs
src/viewer/values/: file_notification.rs  mod.rs  page.rs
src/viewer/view/: application.rs  frame.rs  mod.rs
src/viewer/view/components/: body.rs  body_footer.rs  body_header.rs  body_tab.rs  header.rs  image_buttons.rs  image_canvas.rs  mod.rs
