[package]
name = "image_viewer"
version = "0.1.0"
authors = ["march101348 <12351235ti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
iced = {version = "0.1.1", features = ["image"] }
iced_native = "0.2.2"
walkdir = "2.3.1"
async-std = {version = "1.6.3", features = ["unstable"] }