[package]
name = "image_viewer"
version = "0.1.0"
authors = ["march101348 <12351235ti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.2.0", features = ["image", "tokio"] }
iced_native = "0.3.0"
walkdir = "2.3.1"